--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -6,8 +6,7 @@
     $(document).ready(function() {
         var start_type = {{ obj_type|safe }};
         var start_filter = {{ obj_id|safe }};
-        //retrieve_data(start_type, start_filter);
-        retrieve_data();
+        filter_types[start_type](start_filter)
     });
 </script>
 {% endblock %}
@@ -36,7 +35,7 @@
       });
     }
 
-    function display_conjecture(){
+    function display_conjecture(filter){
       retrieve_data("conjecture", filter, function(){
         if (req.readyState==4 && req.status==200){
           data = JSON.parse(req.responseText);
@@ -44,7 +43,7 @@
       });
     }
 
-    function display_marker(){
+    function display_marker(filter){
       retrieve_data("marker", filter, function(){
         if (req.readyState==4 && req.status==200){
           data = JSON.parse(req.responseText);
@@ -66,19 +65,20 @@
         $( "#videos").empty();
         var id_name = $(this).attr('id');
         if(id_name === "investigation"){
-
+          display_investigation
         }
     });
     
     function retrieve_data(endpoint, filter, success_func){
         endpoint = typeof endpoint !== 'undefined' ? endpoint : 'investigation';
         filter = typeof filter !== 'undefined' ? data : '';
+        //not sending filter yet
         url = "/api/" + endpoint;
         var req = new XMLHttpRequest();
         req.open("GET", url);
         req.setRequestHeader("Content-type", "application/json");
         req.onreadystatechange = success_func;
-        req.send(filter);
+        req.send();
     }
 
 
