--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -18,19 +18,50 @@
   <button type="button" class="filter btn btn-default" id='conjecture'>Conjectures</button>
   <button type="button" class="filter btn btn-default" id='marker'>Markers</button>
 </div>
-
+<hr>
 <div class="container-fluid" id="videos"></div>
 
 <script>
     var req;
+    var filter_types = {
+      "investigation": display_investigations,
+      "conjecture": display_conjectures,
+      "marker": display_markers
+    };
+
+    $(".filter").on("click", function(e){
+        $( "#videos").empty();
+        var id_name = $(this).attr('id');
+        filter_types[id_name]()
+    });
+    
     function display_investigations(filter){
       retrieve_data("investigation", filter, function(){
         if (req.readyState==4 && req.status==200){
-          data = JSON.parse(req.responseText);
-          for(i in data.objects){
-            obj = data.objects[i];
-            div_id = JSON.stringify(obj.id);
-            create_thumbnail_div(div_id, obj.question);
+          var investigations = JSON.parse(req.responseText);
+          for( var i in investigations.objects ){
+            var investigation_obj = investigations.objects[i];
+            var div_id = JSON.stringify(investigation_obj.id);
+            create_thumbnail_div(div_id, investigation_obj.question);
+            var schedule_filter = [{"name": "id", "op": "eq", "val": investigation_obj.id}];
+            display_schedule(div_id, schedule_filter);
+          }
+        }
+      });
+    }
+
+    function display_schedule(parent_div, filter){
+      retrieve_data("schedule", filter, function(){
+        if (req.readyState==4 && req.status==200){
+          var schedule = JSON.parse(req.responseText);
+          for( var i in schedules.objects ){
+            var schedule_obj = schedules.objects[i];
+            for (var j=0; j<schedule_obj.videos.length; j++){
+              var video = schedule_obj.videos[i]
+              var thumbnail_src = video.media_path+"/thumbnail";
+              var target = "/video/?vid="+video.id+"&investigation_id="+filter[0]["val"]
+              display_thumbnail(parent_div, thumbnail_src, target);
+            }
           }
         }
       });
@@ -59,19 +90,7 @@
       });
     }
 
-    var filter_types = {
-      "investigation": display_investigations,
-      "conjecture": display_conjectures,
-      "marker": display_markers
-    };
-
-    $(".filter").on("click", function(e){
-        $( "#videos").empty();
-        var id_name = $(this).attr('id');
-        filter_types[id_name]()
-    });
-    
-    function retrieve_data(endpoint, filter, success_func){
+    function retrieve_data(endpoint, filter, callback_func){
         endpoint = typeof endpoint !== 'undefined' ? endpoint : 'investigation';
         filter = typeof filter !== 'undefined' ? filter : '';
         //not sending filter yet
@@ -79,49 +98,20 @@
         req = new XMLHttpRequest();
         req.open("GET", url);
         req.setRequestHeader("Content-type", "application/json");
-        req.onreadystatechange = success_func;
+        req.onreadystatechange = callback_func;
         req.send();
     }
 
-
-    function display(data){
-        var display_objects = [];
-        //build the display objects in the for loop
-        //we can sort on the data objects attributes - date, day, time?
-        for (obj_index in data.objects){
-           obj = data.objects[obj_index]
-           
-           if ( obj.hasOwnProperty('question') ) {
-                console.log(obj.id);
-                div_id = "investigation"+JSON.stringify(obj.id);
-                create_thumbnail_div(div_id);
-                for (recording in obj.schedule){
-                   console.log(obj.schedule[recording]);
-                   // for (var i = 0; i < obj.schedule[recording].videos.length; i++) {
-                   //     var stub_url = "/video/stub/"+recording.videos[i].id;
-                   //     $("#videos").load(stub_url, function(){
-                   //         alert("load was performed.");
-                   //     });
-                   // }
-                }
-           }
-
-           if ( obj.hasOwnProperty('conjecture') ) {
-                console.log(obj.conjecture);
-                //
-           }
-           if ( obj.hasOwnProperty('timestamp') ) {
-                for (video in obj.videos){
-
-                }
-           }
-        }
-    }
 
     function create_thumbnail_div(div_id, heading){
         $("#videos").append("<div class=row></div>")
         $("#videos").append('<div class="col-sm-6 col-md-4" id="'+div_id+'"></div>');
         $("#"+div_id).append("<h4>"+heading+"</h4>");
+    }
+
+    function display_thumbnail(parent_div, thumbnail_src, target){
+        $("#"+parent_div).append("<div class='thumbnail'><a href=" + 
+          target + "><img src=" + thumbnail_src + "alt='No Video Found.''></a>")
     }
 
 </script>
