creating video thumbnails, at least trying

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -58,7 +58,7 @@
             var schedule_obj = schedule.objects[i];
             for (var j=0; j<schedule_obj.videos.length; j++){
               var video = schedule_obj.videos[i]
-              var thumbnail_src = video.media_path+"/thumbnail";
+              var thumbnail_src = video.media_path+"/thumbnail.jpg";
               var target = "/video/?vid="+video.id+"&investigation_id="+filter[0]["val"]
               display_thumbnail(parent_div, thumbnail_src, target);
             }
