creating video thumbnails, at least trying

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -111,7 +111,7 @@
 
     function display_thumbnail(parent_div, thumbnail_src, target){
         $("#"+parent_div).append("<div class='thumbnail'><a href=" + 
-          target + "><img src=" + thumbnail_src + "alt='No Video Found.''></a>")
+          target + "><img src='" + thumbnail_src + "' alt='No Video Found.''></a>")
     }
 
 </script>
