fixing temp video targets

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -59,7 +59,7 @@
             for (var j=0; j<schedule_obj.videos.length; j++){
               var video = schedule_obj.videos[i];
               var thumbnail_src = video.media_path+"/thumbnail.jpg";
-              var target = video.media_oath+"/final.jpg";
+              var target = video.media_path+"/final.mp4";
               // var target = "/video/?vid="+video.id+"&investigation_id="+filter[0]["val"]
               display_thumbnail(parent_div, thumbnail_src, target);
             }
@@ -89,7 +89,7 @@
             for(var j=0;j<marker.videos.length;j++){
               var video = marker.videos[i];
               var thumbnail_src = video.media_path+"/thumbnail.jpg";
-              var target = video.media_path+"/final.jpg";
+              var target = video.media_path+"/final.mp4";
               display_thumbnail(div_id, thumbnail_src, target);
             }
           }
