--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -38,11 +38,15 @@
 
       <video id='live'
          class='video-js vjs-default-skin'
+         muted
          controls
          preload
-         muted>
+         >
         <source src='/hls/index.m3u8' type="application/x-mpegURL">
       </video>
+
+
+
   </div>
   <script>
     window.onload = function () {
