add routes for show demo

--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -39,6 +39,7 @@
           <li><a href="{{ url_for('investigation') }}">Investigate</a></li>
           <li><a href="{{ url_for('videos') }}">Videos</a></li>
           <li><a href="{{ url_for('capture') }}">Capture</a></li>
+          <li><a href="{{ url_for('demo') }}">Demo</a></li>
           <li><a href="{{ url_for('camera', state='live') }}">Live View</a></li>
           <li><a href="{{ url_for('signout') }}">Sign Out</a></li>
             {% if g.cam_state=='off' %}
