--- a/application/templates/show.html
+++ b/application/templates/show.html
@@ -2,7 +2,6 @@
 {% set active_page = "live" %}
 {% block head%}
 {{ super() }}
-<script src="/static/js/demo.js" type="text/javascript"></script>
 <style>
 .arrow-up {
 width: 0; 
@@ -119,7 +118,10 @@ player.volume(0);
 
 
 }
-
+</script>
+<script src="/static/js/demo.js" type="text/javascript"></script>
+<script>
+videoMarker.initialize();
 </script>
 
 {% endblock %}
