--- a/application/templates/show.html
+++ b/application/templates/show.html
@@ -95,7 +95,7 @@
 <video id='live'
 class='video-js vjs-default-skin' width="400" height="225">
 
-<source src='/hls/index.m3u8' type="application/x-mpegURL">
+<source src='/media/demo/video.mp4' type="video/mp4">
 </video>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-6">
@@ -109,11 +109,11 @@ class='video-js vjs-default-skin' width="400" height="225">
 <script>
 window.onload = function () {
 
-videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
+//videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
 // initialize the player
 videojs("live", { "controls": true, "autoplay": true, "muted": true }).ready(function(){
 var player = this;
-player.volume(0); 
+//player.volume(0); 
 });
 
 
